<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:orientation="vertical"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content">
        <ImageView
                android:src="@drawable/logo"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:scaleType="fitXY"
                android:background="#542A0C"
                android:contentDescription="@string/app_name" />
        <EditText
                android:id="@+id/email"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_marginBottom="4dp"
                android:hint="@string/send_to_email" />
        <TextView
                android:id="@+id/emailError"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_marginBottom="4dp"
                android:textColor="#660000"
                android:textStyle="bold"
                android:visibility="gone"
                android:text="@string/email_invalid"
                android:hint="@string/send_to_email" />
        <EditText
                android:id="@+id/extraSubject"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_marginBottom="4dp"
                android:hint="@string/extra_subject" />
        <EditText
                android:id="@+id/message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:lines="4"
                android:maxLines="5"
                android:minLines="2"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_marginBottom="16dp"
                android:fontFamily="sans-serif"
                android:hint="@string/message"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>